Добавлена возможность получения истории транзакций, оптимизированы аспекты маскировки и дешифровки, внедрены конфигурации для prod окружения
- Реализован метод для получения истории транзакций.
- Оптимизированы аспекты `CardMaskingAspect` и `CardDecryptionAspect` для обработки сущностей и логики.
- Добавлены unit-тесты для шифрования и маскировки карт в `EncryptionUtilJUnitTest`.
- Перенесены настройки prod в `application-prod.yaml` и `Dockerfile`.
- Обновлен `docker-compose.yml` для параметризации переменных окружения.
- Упрощены API контроля и убраны лишние параметры (например, `HttpServletRequest`).
- Скорректированы описания в OpenAPI спецификации.
